# routes/router.js
@@ -23,34 +23,40 @@ const {
     sh_set_new_pin_controller,
     sh_create_customer_address_information_controller,
     sh_login_user_information_controller,
-    sh_refresh_token_information_controller
+    sh_refresh_token_information_controller,
+    sh_user_pin_reset_code_verification_controller,
+    sh_user_reset_pin_controller
 } = require('../controllers/User_Management_Controllers/sh_user_management_controller');
 
 var router = express.Router();
 
 router.post('/sh_create_user_information', sh_create_user_information_controller)
 
-router.post('/sh_account_code_verification', sh_user_account_verification_code_controller)
+router.post('/sh_user_account_code_verification', sh_user_account_verification_code_controller)
 
-router.post('/sh_resend_verification_code', sh_user_resend_verification_code_controller)
+router.post('/sh_user_resend_verification_code', sh_user_resend_verification_code_controller)
 
-router.post('/sh_set_phone_pin', sh_user_set_phone_pin_controller)
+router.post('/sh_user_set_phone_pin', sh_user_set_phone_pin_controller)
 
-router.post('/sh_reset_code', sh_reset_code_controller)
+router.post('/sh_user_reset_code', sh_reset_code_controller)
 
-router.post('/sh_reset_code_verification', sh_reset_code_verification_controller)
+router.post('/sh_user_reset_code_verification', sh_reset_code_verification_controller)
 
-router.post('/sh_set_new_password', sh_set_new_password_controller)
+router.post('/sh_user_set_new_password', sh_set_new_password_controller)
 
-router.post('/sh_set_new_pin', sh_set_new_pin_controller)
+router.post('/sh_user_reset_pin', sh_user_reset_pin_controller)
 
-router.post('/sh_create_customer_information', sh_create_customer_information_controller)
+router.post('/sh_user_reset_pin_code_verification', sh_user_pin_reset_code_verification_controller)
 
-router.post('/sh_create_customer_address_information', sh_create_customer_address_information_controller)
+router.post('/sh_user_set_new_pin', sh_set_new_pin_controller)
 
-router.post('/sh_login_information', sh_login_user_information_controller)
+router.post('/sh_user_create_customer_information', sh_create_customer_information_controller)
 
-router.post('/sh_refresh_token_information/:sh_refresh_token', sh_refresh_token_information_controller)
+router.post('/sh_user_create_customer_address_information', sh_create_customer_address_information_controller)
+
+router.post('/sh_user_login_information', sh_login_user_information_controller)
+
+router.post('/sh_user_refresh_token_information/:sh_refresh_token', sh_refresh_token_information_controller)
 
 //events
 
